@@ -1,7 +1,7 @@
 chmdeco -- decompile CHM files and extract files from ITS files (future)
 Copyright (C) 2003 Pabs, <pabs@zip.to>
 
-This file is part of chmdeco; you can redistribute it and/or modify
+This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2 of the License, or
 any later version.
