@@ -17,13 +17,15 @@
 # http://www.gnu.org
 
 # Process this file with autoconf to produce a configure script.
-AC_INIT([chmdeco.c])
-AM_CONFIG_HEADER([config.h])
-AM_INIT_AUTOMAKE([chmdeco], [0.3.1])
+AC_PREREQ(2.59)
+AC_INIT([CHM Decompiler], [0.3.1], [pabs@zip.to], [chmdeco])
+AC_CONFIG_SRCDIR([src/chmdeco.c])
+AC_CONFIG_HEADER([config.h])
+AM_INIT_AUTOMAKE
+
 
 # Checks for programs.
 AC_PROG_CC
-AC_PROG_CC_STDC
 AC_EXEEXT
 AC_PROG_INSTALL
 AC_PROG_AWK
@@ -35,7 +37,7 @@ AC_CHECK_TOOL([STRIP],[strip])
 # Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h string.h unistd.h errno.h])
+AC_CHECK_HEADERS([limits.h stdlib.h string.h strings.h sys/time.h unistd.h utime.h errno.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
@@ -45,10 +47,13 @@ AC_TYPE_SIZE_T
 AC_STRUCT_TM
 
 # Checks for library functions.
+AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_MALLOC
 AC_FUNC_MEMCMP
+AC_FUNC_REALLOC
 AC_FUNC_STAT
 AC_FUNC_STRFTIME
-AC_CHECK_FUNCS([atexit getcwd memchr memset mkdir pathconf strcspn strdup strerror strncasecmp strrchr memcpy])
+AC_CHECK_FUNCS([atexit getcwd memchr memset mkdir pathconf strcspn strdup strerror strncasecmp strpbrk strrchr memcpy])
 
-AC_OUTPUT([Makefile chmdeco.spec])
+AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile chmdeco.spec])
+AC_OUTPUT
